parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     for -> FOR for_assign IN expression statement_block
Rule 5     for -> WHILE expression statement_block
Rule 6     statement -> assign
Rule 7     assign -> LET NAME = expression
Rule 8     assign -> VAR NAME = expression
Rule 9     assign -> NAME = expression
Rule 10    statement_block -> { statement_list }
Rule 11    for_assign -> NAME
Rule 12    statement_block -> statement
Rule 13    statement -> print
Rule 14    statement -> expression
Rule 15    statement -> for
Rule 16    print -> PRINT ( print_expression_list )
Rule 17    print -> PRINT ( expression )
Rule 18    expression -> READLINE ( )
Rule 19    expression -> MIN ( expression , expression )
Rule 20    expression -> MAX ( expression , expression )
Rule 21    expression -> ABS ( expression )
Rule 22    expression -> - expression
Rule 23    expression -> expression + expression
Rule 24    expression -> expression - expression
Rule 25    expression -> expression * expression
Rule 26    expression -> expression / expression
Rule 27    expression -> expression % expression
Rule 28    expression -> expression ELLIPSIS expression
Rule 29    expression -> NUMBER
Rule 30    expression -> NAME
Rule 31    expression -> DQ_STRING
Rule 32    expression -> SQ_STRING
Rule 33    expression -> ( expression )
Rule 34    expression -> expression DOUBLE_EQ expression
Rule 35    expression -> expression NOT_EQ expression
Rule 36    expression -> expression > expression
Rule 37    expression -> expression < expression
Rule 38    expression -> expression LESS_EQ expression
Rule 39    expression -> expression GREATER_EQ expression
Rule 40    statement -> IF expression { statement_block }
Rule 41    statement -> IF expression { statement } ELSE { statement_block }
Rule 42    print_expression_list -> <empty>
Rule 43    print_expression_list -> print_expression_list print_expression
Rule 44    print_expression_list -> print_expression
Rule 45    print_expression -> expression ,

Terminals, with rules where they appear

%                    : 27
(                    : 16 17 18 19 20 21 33
)                    : 16 17 18 19 20 21 33
*                    : 25
+                    : 23
,                    : 19 20 45
-                    : 22 24
/                    : 26
<                    : 37
=                    : 7 8 9
>                    : 36
ABS                  : 21
DOUBLE_EQ            : 34
DQ_STRING            : 31
ELLIPSIS             : 28
ELSE                 : 41
FOR                  : 4
GREATER_EQ           : 39
IF                   : 40 41
IN                   : 4
LESS_EQ              : 38
LET                  : 7
MAX                  : 20
MIN                  : 19
NAME                 : 7 8 9 11 30
NOT_EQ               : 35
NUMBER               : 29
PRINT                : 16 17
READLINE             : 18
SQ_STRING            : 32
VAR                  : 8
WHILE                : 5
error                : 
{                    : 10 40 41 41
}                    : 10 40 41 41

Nonterminals, with rules where they appear

assign               : 6
expression           : 4 5 7 8 9 14 17 19 19 20 20 21 22 23 23 24 24 25 25 26 26 27 27 28 28 33 34 34 35 35 36 36 37 37 38 38 39 39 40 41 45
for                  : 15
for_assign           : 4
print                : 13
print_expression     : 43 44
print_expression_list : 16 43
program              : 0
statement            : 2 3 12 41
statement_block      : 4 5 40 41
statement_list       : 1 2 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (6) statement -> . assign
    (13) statement -> . print
    (14) statement -> . expression
    (15) statement -> . for
    (40) statement -> . IF expression { statement_block }
    (41) statement -> . IF expression { statement } ELSE { statement_block }
    (7) assign -> . LET NAME = expression
    (8) assign -> . VAR NAME = expression
    (9) assign -> . NAME = expression
    (16) print -> . PRINT ( print_expression_list )
    (17) print -> . PRINT ( expression )
    (18) expression -> . READLINE ( )
    (19) expression -> . MIN ( expression , expression )
    (20) expression -> . MAX ( expression , expression )
    (21) expression -> . ABS ( expression )
    (22) expression -> . - expression
    (23) expression -> . expression + expression
    (24) expression -> . expression - expression
    (25) expression -> . expression * expression
    (26) expression -> . expression / expression
    (27) expression -> . expression % expression
    (28) expression -> . expression ELLIPSIS expression
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) expression -> . DQ_STRING
    (32) expression -> . SQ_STRING
    (33) expression -> . ( expression )
    (34) expression -> . expression DOUBLE_EQ expression
    (35) expression -> . expression NOT_EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression LESS_EQ expression
    (39) expression -> . expression GREATER_EQ expression
    (4) for -> . FOR for_assign IN expression statement_block
    (5) for -> . WHILE expression statement_block

    IF              shift and go to state 8
    LET             shift and go to state 9
    VAR             shift and go to state 11
    NAME            shift and go to state 10
    PRINT           shift and go to state 12
    READLINE        shift and go to state 14
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    ABS             shift and go to state 17
    -               shift and go to state 18
    NUMBER          shift and go to state 19
    DQ_STRING       shift and go to state 20
    SQ_STRING       shift and go to state 21
    (               shift and go to state 13
    FOR             shift and go to state 22
    WHILE           shift and go to state 23

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assign                         shift and go to state 4
    print                          shift and go to state 5
    expression                     shift and go to state 6
    for                            shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (6) statement -> . assign
    (13) statement -> . print
    (14) statement -> . expression
    (15) statement -> . for
    (40) statement -> . IF expression { statement_block }
    (41) statement -> . IF expression { statement } ELSE { statement_block }
    (7) assign -> . LET NAME = expression
    (8) assign -> . VAR NAME = expression
    (9) assign -> . NAME = expression
    (16) print -> . PRINT ( print_expression_list )
    (17) print -> . PRINT ( expression )
    (18) expression -> . READLINE ( )
    (19) expression -> . MIN ( expression , expression )
    (20) expression -> . MAX ( expression , expression )
    (21) expression -> . ABS ( expression )
    (22) expression -> . - expression
    (23) expression -> . expression + expression
    (24) expression -> . expression - expression
    (25) expression -> . expression * expression
    (26) expression -> . expression / expression
    (27) expression -> . expression % expression
    (28) expression -> . expression ELLIPSIS expression
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) expression -> . DQ_STRING
    (32) expression -> . SQ_STRING
    (33) expression -> . ( expression )
    (34) expression -> . expression DOUBLE_EQ expression
    (35) expression -> . expression NOT_EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression LESS_EQ expression
    (39) expression -> . expression GREATER_EQ expression
    (4) for -> . FOR for_assign IN expression statement_block
    (5) for -> . WHILE expression statement_block

    $end            reduce using rule 1 (program -> statement_list .)
    IF              shift and go to state 8
    LET             shift and go to state 9
    VAR             shift and go to state 11
    NAME            shift and go to state 10
    PRINT           shift and go to state 12
    READLINE        shift and go to state 14
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    ABS             shift and go to state 17
    -               shift and go to state 18
    NUMBER          shift and go to state 19
    DQ_STRING       shift and go to state 20
    SQ_STRING       shift and go to state 21
    (               shift and go to state 13
    FOR             shift and go to state 22
    WHILE           shift and go to state 23

    statement                      shift and go to state 24
    assign                         shift and go to state 4
    print                          shift and go to state 5
    expression                     shift and go to state 6
    for                            shift and go to state 7

state 3

    (3) statement_list -> statement .

    IF              reduce using rule 3 (statement_list -> statement .)
    LET             reduce using rule 3 (statement_list -> statement .)
    VAR             reduce using rule 3 (statement_list -> statement .)
    NAME            reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    READLINE        reduce using rule 3 (statement_list -> statement .)
    MIN             reduce using rule 3 (statement_list -> statement .)
    MAX             reduce using rule 3 (statement_list -> statement .)
    ABS             reduce using rule 3 (statement_list -> statement .)
    -               reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    DQ_STRING       reduce using rule 3 (statement_list -> statement .)
    SQ_STRING       reduce using rule 3 (statement_list -> statement .)
    (               reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    }               reduce using rule 3 (statement_list -> statement .)


state 4

    (6) statement -> assign .

    IF              reduce using rule 6 (statement -> assign .)
    LET             reduce using rule 6 (statement -> assign .)
    VAR             reduce using rule 6 (statement -> assign .)
    NAME            reduce using rule 6 (statement -> assign .)
    PRINT           reduce using rule 6 (statement -> assign .)
    READLINE        reduce using rule 6 (statement -> assign .)
    MIN             reduce using rule 6 (statement -> assign .)
    MAX             reduce using rule 6 (statement -> assign .)
    ABS             reduce using rule 6 (statement -> assign .)
    -               reduce using rule 6 (statement -> assign .)
    NUMBER          reduce using rule 6 (statement -> assign .)
    DQ_STRING       reduce using rule 6 (statement -> assign .)
    SQ_STRING       reduce using rule 6 (statement -> assign .)
    (               reduce using rule 6 (statement -> assign .)
    FOR             reduce using rule 6 (statement -> assign .)
    WHILE           reduce using rule 6 (statement -> assign .)
    $end            reduce using rule 6 (statement -> assign .)
    }               reduce using rule 6 (statement -> assign .)


state 5

    (13) statement -> print .

    IF              reduce using rule 13 (statement -> print .)
    LET             reduce using rule 13 (statement -> print .)
    VAR             reduce using rule 13 (statement -> print .)
    NAME            reduce using rule 13 (statement -> print .)
    PRINT           reduce using rule 13 (statement -> print .)
    READLINE        reduce using rule 13 (statement -> print .)
    MIN             reduce using rule 13 (statement -> print .)
    MAX             reduce using rule 13 (statement -> print .)
    ABS             reduce using rule 13 (statement -> print .)
    -               reduce using rule 13 (statement -> print .)
    NUMBER          reduce using rule 13 (statement -> print .)
    DQ_STRING       reduce using rule 13 (statement -> print .)
    SQ_STRING       reduce using rule 13 (statement -> print .)
    (               reduce using rule 13 (statement -> print .)
    FOR             reduce using rule 13 (statement -> print .)
    WHILE           reduce using rule 13 (statement -> print .)
    $end            reduce using rule 13 (statement -> print .)
    }               reduce using rule 13 (statement -> print .)


state 6

    (14) statement -> expression .
    (23) expression -> expression . + expression
    (24) expression -> expression . - expression
    (25) expression -> expression . * expression
    (26) expression -> expression . / expression
    (27) expression -> expression . % expression
    (28) expression -> expression . ELLIPSIS expression
    (34) expression -> expression . DOUBLE_EQ expression
    (35) expression -> expression . NOT_EQ expression
    (36) expression -> expression . > expression
    (37) expression -> expression . < expression
    (38) expression -> expression . LESS_EQ expression
    (39) expression -> expression . GREATER_EQ expression

  ! shift/reduce conflict for - resolved as shift
    IF              reduce using rule 14 (statement -> expression .)
    LET             reduce using rule 14 (statement -> expression .)
    VAR             reduce using rule 14 (statement -> expression .)
    NAME            reduce using rule 14 (statement -> expression .)
    PRINT           reduce using rule 14 (statement -> expression .)
    READLINE        reduce using rule 14 (statement -> expression .)
    MIN             reduce using rule 14 (statement -> expression .)
    MAX             reduce using rule 14 (statement -> expression .)
    ABS             reduce using rule 14 (statement -> expression .)
    NUMBER          reduce using rule 14 (statement -> expression .)
    DQ_STRING       reduce using rule 14 (statement -> expression .)
    SQ_STRING       reduce using rule 14 (statement -> expression .)
    (               reduce using rule 14 (statement -> expression .)
    FOR             reduce using rule 14 (statement -> expression .)
    WHILE           reduce using rule 14 (statement -> expression .)
    $end            reduce using rule 14 (statement -> expression .)
    }               reduce using rule 14 (statement -> expression .)
    +               shift and go to state 25
    -               shift and go to state 26
    *               shift and go to state 27
    /               shift and go to state 28
    %               shift and go to state 29
    ELLIPSIS        shift and go to state 30
    DOUBLE_EQ       shift and go to state 31
    NOT_EQ          shift and go to state 32
    >               shift and go to state 33
    <               shift and go to state 34
    LESS_EQ         shift and go to state 35
    GREATER_EQ      shift and go to state 36

  ! -               [ reduce using rule 14 (statement -> expression .) ]


state 7

    (15) statement -> for .

    IF              reduce using rule 15 (statement -> for .)
    LET             reduce using rule 15 (statement -> for .)
    VAR             reduce using rule 15 (statement -> for .)
    NAME            reduce using rule 15 (statement -> for .)
    PRINT           reduce using rule 15 (statement -> for .)
    READLINE        reduce using rule 15 (statement -> for .)
    MIN             reduce using rule 15 (statement -> for .)
    MAX             reduce using rule 15 (statement -> for .)
    ABS             reduce using rule 15 (statement -> for .)
    -               reduce using rule 15 (statement -> for .)
    NUMBER          reduce using rule 15 (statement -> for .)
    DQ_STRING       reduce using rule 15 (statement -> for .)
    SQ_STRING       reduce using rule 15 (statement -> for .)
    (               reduce using rule 15 (statement -> for .)
    FOR             reduce using rule 15 (statement -> for .)
    WHILE           reduce using rule 15 (statement -> for .)
    $end            reduce using rule 15 (statement -> for .)
    }               reduce using rule 15 (statement -> for .)


state 8

    (40) statement -> IF . expression { statement_block }
    (41) statement -> IF . expression { statement } ELSE { statement_block }
    (18) expression -> . READLINE ( )
    (19) expression -> . MIN ( expression , expression )
    (20) expression -> . MAX ( expression , expression )
    (21) expression -> . ABS ( expression )
    (22) expression -> . - expression
    (23) expression -> . expression + expression
    (24) expression -> . expression - expression
    (25) expression -> . expression * expression
    (26) expression -> . expression / expression
    (27) expression -> . expression % expression
    (28) expression -> . expression ELLIPSIS expression
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) expression -> . DQ_STRING
    (32) expression -> . SQ_STRING
    (33) expression -> . ( expression )
    (34) expression -> . expression DOUBLE_EQ expression
    (35) expression -> . expression NOT_EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression LESS_EQ expression
    (39) expression -> . expression GREATER_EQ expression

    READLINE        shift and go to state 14
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    ABS             shift and go to state 17
    -               shift and go to state 18
    NUMBER          shift and go to state 19
    NAME            shift and go to state 38
    DQ_STRING       shift and go to state 20
    SQ_STRING       shift and go to state 21
    (               shift and go to state 13

    expression                     shift and go to state 37

state 9

    (7) assign -> LET . NAME = expression

    NAME            shift and go to state 39


state 10

    (9) assign -> NAME . = expression
    (30) expression -> NAME .

    =               shift and go to state 40
    +               reduce using rule 30 (expression -> NAME .)
    -               reduce using rule 30 (expression -> NAME .)
    *               reduce using rule 30 (expression -> NAME .)
    /               reduce using rule 30 (expression -> NAME .)
    %               reduce using rule 30 (expression -> NAME .)
    ELLIPSIS        reduce using rule 30 (expression -> NAME .)
    DOUBLE_EQ       reduce using rule 30 (expression -> NAME .)
    NOT_EQ          reduce using rule 30 (expression -> NAME .)
    >               reduce using rule 30 (expression -> NAME .)
    <               reduce using rule 30 (expression -> NAME .)
    LESS_EQ         reduce using rule 30 (expression -> NAME .)
    GREATER_EQ      reduce using rule 30 (expression -> NAME .)
    IF              reduce using rule 30 (expression -> NAME .)
    LET             reduce using rule 30 (expression -> NAME .)
    VAR             reduce using rule 30 (expression -> NAME .)
    NAME            reduce using rule 30 (expression -> NAME .)
    PRINT           reduce using rule 30 (expression -> NAME .)
    READLINE        reduce using rule 30 (expression -> NAME .)
    MIN             reduce using rule 30 (expression -> NAME .)
    MAX             reduce using rule 30 (expression -> NAME .)
    ABS             reduce using rule 30 (expression -> NAME .)
    NUMBER          reduce using rule 30 (expression -> NAME .)
    DQ_STRING       reduce using rule 30 (expression -> NAME .)
    SQ_STRING       reduce using rule 30 (expression -> NAME .)
    (               reduce using rule 30 (expression -> NAME .)
    FOR             reduce using rule 30 (expression -> NAME .)
    WHILE           reduce using rule 30 (expression -> NAME .)
    $end            reduce using rule 30 (expression -> NAME .)
    }               reduce using rule 30 (expression -> NAME .)


state 11

    (8) assign -> VAR . NAME = expression

    NAME            shift and go to state 41


state 12

    (16) print -> PRINT . ( print_expression_list )
    (17) print -> PRINT . ( expression )

    (               shift and go to state 42


state 13

    (33) expression -> ( . expression )
    (18) expression -> . READLINE ( )
    (19) expression -> . MIN ( expression , expression )
    (20) expression -> . MAX ( expression , expression )
    (21) expression -> . ABS ( expression )
    (22) expression -> . - expression
    (23) expression -> . expression + expression
    (24) expression -> . expression - expression
    (25) expression -> . expression * expression
    (26) expression -> . expression / expression
    (27) expression -> . expression % expression
    (28) expression -> . expression ELLIPSIS expression
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) expression -> . DQ_STRING
    (32) expression -> . SQ_STRING
    (33) expression -> . ( expression )
    (34) expression -> . expression DOUBLE_EQ expression
    (35) expression -> . expression NOT_EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression LESS_EQ expression
    (39) expression -> . expression GREATER_EQ expression

    READLINE        shift and go to state 14
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    ABS             shift and go to state 17
    -               shift and go to state 18
    NUMBER          shift and go to state 19
    NAME            shift and go to state 38
    DQ_STRING       shift and go to state 20
    SQ_STRING       shift and go to state 21
    (               shift and go to state 13

    expression                     shift and go to state 43

state 14

    (18) expression -> READLINE . ( )

    (               shift and go to state 44


state 15

    (19) expression -> MIN . ( expression , expression )

    (               shift and go to state 45


state 16

    (20) expression -> MAX . ( expression , expression )

    (               shift and go to state 46


state 17

    (21) expression -> ABS . ( expression )

    (               shift and go to state 47


state 18

    (22) expression -> - . expression
    (18) expression -> . READLINE ( )
    (19) expression -> . MIN ( expression , expression )
    (20) expression -> . MAX ( expression , expression )
    (21) expression -> . ABS ( expression )
    (22) expression -> . - expression
    (23) expression -> . expression + expression
    (24) expression -> . expression - expression
    (25) expression -> . expression * expression
    (26) expression -> . expression / expression
    (27) expression -> . expression % expression
    (28) expression -> . expression ELLIPSIS expression
    (29) expression -> . NUMBER
    (30) expression -> . NAME
    (31) expression -> . DQ_STRING
    (32) expression -> . SQ_STRING
    (33) expression -> . ( expression )
    (34) expression -> . expression DOUBLE_EQ expression
    (35) expression -> . expression NOT_EQ expression
    (36) expression -> . expression > expression
    (37) expression -> . expression < expression
    (38) expression -> . expression LESS_EQ expression
    (39) expression -> . expression GREATER_EQ expression

    READLINE        shift and go to state 14
    MIN             shift and go to state 15
    MAX             shift and go to state 16
    ABS             shift and go to state 17
    -               shift and go to state 18
    NUMBER          shift and go to state 19
    NAME            shift and go to state 38
    DQ_STRING       shift and go to state 20
    SQ_STRING       shift and go to state 21
    (               shift and go to state 13

    expression                     shift and go to state 48

state 19

    (29) expression -> NUMBER .

    +               reduce using rule 29 (expression -> NUMBER .)
    -               reduce using rule 29 (expression -> NUMBER .)
    *               reduce using rule 29 (expression -> NUMBER .)
    /               reduce using rule 29 (expression -> NUMBER .)
    %               reduce using rule 29 (expression -> NUMBER .)
    ELLIPSIS        reduce using rule 29 (expression -> NUMBER .)
    DOUBLE_EQ       reduce using rule 29 (expression -> NUMBER .)
    NOT_EQ          reduce using rule 29 (expression -> NUMBER .)
    >               reduce using rule 29 (expression -> NUMBER .)
    <               reduce using rule 29 (expression -> NUMBER .)
    LESS_EQ         reduce using rule 29 (expression -> NUMBER .)
    GREATER_EQ      reduce using rule 29 (expression -> NUMBER .)
    IF              reduce using rule 29 (expression -> NUMBER .)
    LET             reduce using rule 29 (expression -> NUMBER .)
    VAR             reduce using rule 29 (expression -> NUMBER .)
    NAME            reduce using rule 29 (expression -> NUMBER .)
    PRINT           reduce using rule 29 (expression -> NUMBER .)
    READLINE        reduce using rule 29 (expression -> NUMBER .)
    MIN             reduce using rule 29 (expression -> NUMBER .)
    MAX             reduce using rule 29 (expression -> NUMBER .)
    ABS             reduce using rule 29 (expression -> NUMBER .)
    NUMBER          reduce using rule 29 (expression -> NUMBER .)
    DQ_STRING       reduce using rule 29 (expression -> NUMBER .)
    SQ_STRING       reduce using rule 29 (expression -> NUMBER .)
    (               reduce using rule 29 (expression -> NUMBER .)
    FOR             reduce using rule 29 (expression -> NUMBER .)
    WHILE           reduce using rule 29 (expression -> NUMBER .)
    $end            reduce using rule 29 (expression -> NUMBER .)
    {               reduce using rule 29 (expression -> NUMBER .)
    )               reduce using rule 29 (expression -> NUMBER .)
    }               reduce using rule 29 (expression -> NUMBER .)
    ,               reduce using rule 29 (expression -> NUMBER .)


state 20

    (31) expression -> DQ_STRING .
